--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "~10.0.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "^0.11.6",
     "intl": "^1.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
