--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@expo-google-fonts/poppins": "^0.2.2",
     "@hookform/resolvers": "^2.8.8",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "@types/react-native-table-component": "^1.2.3",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
+    "expo-calendar": "~10.1.0",
     "expo-font": "~10.0.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
@@ -28,9 +32,11 @@
     "react-hook-form": "^7.27.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-modal-datetime-picker": "^13.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-table-component": "^1.2.2",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3",
