--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
-    "@types/react-native-table-component": "^1.2.3",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-calendar": "~10.1.0",
@@ -31,6 +30,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^7.27.1",
     "react-native": "0.64.3",
+    "react-native-calendars": "^1.1280.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-modal-datetime-picker": "^13.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
